Add complete project: tasks 1-8, runners, data, and docs; exclude generated outputs/

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ venv/
 ENV/
 env/
 
+# Generated outputs (CSV, PNG, etc)
+outputs/
+
 # IDEs
 .vscode/
 .idea/
@@ -39,3 +42,4 @@ env/
 # OS
 .DS_Store
 Thumbs.db
+
